update lucene